--- a/.github/workflows/myaction.yml
+++ b/.github/workflows/myaction.yml
@@ -1,4 +1,23 @@
-...
-- uses: oNaiPs/secrets-to-env-action@v1
-  with:
-    secrets: ${{ toJSON(secrets) }}
+name: Deploy to GitHub Pages
+    on:
+      push:
+        branches:
+          - master
+    jobs:
+      build-and-deploy:
+        runs-on: ubuntu-latest
+        steps:
+        - name: Checkout
+          uses: actions/checkout@v1
+
+        - name: Build
+          run: |
+            npm install
+            npm run-script build
+
+        - name: Deploy
+          uses: JamesIves/github-pages-deploy-action@releases/v3
+          with:
+            GITHUB_TOKEN: ${{ secrets.API_KEY }}
+            BRANCH: main
+            FOLDER: docs/
