--- a/.github/workflows/myaction.yml
+++ b/.github/workflows/myaction.yml
@@ -1,8 +1,9 @@
+...
 name: Deploy to GitHub Pages
     on:
       push:
         branches:
-          - master
+          - main
     jobs:
       build-and-deploy:
         runs-on: ubuntu-latest
@@ -14,10 +15,26 @@ name: Deploy to GitHub Pages
           run: |
             npm install
             npm run-script build
-
+        
+        - name: secrets-to-env-action
+          # You may pin to the exact commit or the version.
+          # uses: oNaiPs/secrets-to-env-action@2fe98aa2e8f610341c3dd916aff27b218b92f6f8
+          uses: oNaiPs/secrets-to-env-action@v1
+          with:
+            # JSON representation of the secrets, use provided placeholder'
+            secrets: ${{ secrets.API_KEY }}
+            # Prefix to add to all secrets, e.g.: SECRET_
+            prefix: # optional
+            # Comma-separated list of secrets to export
+            include: # optional
+            # Comma-separated list of secrets to skip exporting
+            exclude: # optional
+            # Converts secrets name to a specific string format
+            convert: # optional
+        
         - name: Deploy
           uses: JamesIves/github-pages-deploy-action@releases/v3
           with:
-            GITHUB_TOKEN: ${{ secrets.API_KEY }}
+            API_KEY: ${{ secrets.API_KEY }}
             BRANCH: main
             FOLDER: docs/
