--- a/.github/workflows/myaction.yml
+++ b/.github/workflows/myaction.yml
@@ -24,9 +24,13 @@ jobs:
             # JSON representation of the secrets, use provided placeholder'
             secrets: ${{ secrets.API_KEY }}
         
-        - name: Deploy
-          uses: JamesIves/github-pages-deploy-action@releases/v3
+        - name: Deploy to GitHub Pages
+          # You may pin to the exact commit or the version.
+          # uses: JamesIves/github-pages-deploy-action@13046b614c663b56cba4dda3f30b9736a748b80d
+          uses: JamesIves/github-pages-deploy-action@v4.4.0
           with:
-            API_KEY: ${{ secrets.API_KEY }}
-            BRANCH: main
-            FOLDER: docs/
+            # This is the branch you wish to deploy to, for example gh-pages or docs.
+            branch: main # optional, default is gh-pages
+            # The folder in your repository that you want to deploy. If your build script compiles into a directory named build you would put it here. Folder paths cannot have a leading / or ./. If you wish to deploy the root directory you can place a . here.
+            folder: docs
+
