--- a/.github/workflows/myaction.yml
+++ b/.github/workflows/myaction.yml
@@ -17,7 +17,7 @@ jobs:
           uses: oNaiPs/secrets-to-env-action@v1
           with:
             # JSON representation of the secrets, use provided placeholder'
-            secrets: ${{ .API_KEY }}
+            secrets: ${{ secrets.API_KEY }}
         
         - name: Deploy to GitHub Pages
           # You may pin to the exact commit or the version.
